[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/TestDrive/Track.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/grass3.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/TestDrive/Car.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Car.gd" type="Script" id=4]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 1000, 1000, 1 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 2 )
size = Vector2( 10000, 4000 )
subdivide_width = 1
subdivide_depth = 1

[node name="TestDrive" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.651, 9.25385, 19.5854 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -93.5537, -1.01015, 43.8957 )

[node name="Box" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="Barcelona" parent="StaticBody/Box" instance=ExtResource( 1 )]

[node name="Ground" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 3 )
material/0 = null

[node name="Car" type="Spatial" parent="."]
transform = Transform( -0.769863, 0, 0.638209, -0.0385457, 0.998174, -0.0464971, -0.637044, -0.0603967, -0.768457, -0.0475006, 0.279388, 3.62679 )

[node name="r8-fsi" parent="Car" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.987553, 1.71043 )
mass = 122.449
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.356971, 0, -0.934115, 0, 1, 0, 0.934115, 0, -0.356971, -6.21183, 2.623, 1.46202 )
fov = 71.7

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="SpeedLabel" type="Label" parent="HUD"]
margin_left = 328.322
margin_top = 128.737
margin_right = 1811.32
margin_bottom = 1159.74
text = "0"

[node name="TimeLabel" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
text = "00:00"

[node name="DistanceLabel" type="Label" parent="HUD"]
margin_left = 615.571
margin_top = 87.5995
margin_right = 1773.57
margin_bottom = 959.6
text = "0"
[connection signal="distance_changed" from="Car/r8-fsi" to="HUD" method="_on_distance_changed"]
[connection signal="finish_reached" from="Car/r8-fsi" to="HUD" method="_on_finish_reached"]
[connection signal="timeout" from="Timer" to="Car/r8-fsi" method="_on_timeout"]
